force-app/main/default/objects/SCP_Answers__c/SCP_Answers__c.object-meta.xml
<CustomObject>
    <label>SCP Answers</label>
    <nameField>
        <label>SCP Answers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SCP Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>