force-app/main/default/objects/SCP_Answers__c/fields/Parent_Question__c.field-meta.xml
<CustomField>
    <fullName>Parent_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Question</label>
    <referenceTo>Question_Master__c</referenceTo>
    <relationshipLabel>SCP Answers (Parent Question)</relationshipLabel>
    <relationshipName>SCP_Answers1</relationshipName>
    <type>Lookup</type>
</CustomField>