force-app/main/default/objects/SCP_Answers__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question_Master__c</referenceTo>
    <relationshipLabel>SCP Answers</relationshipLabel>
    <relationshipName>SCP_Answers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>