force-app/main/default/objects/SCP_Answers__c/fields/Ratting__c.field-meta.xml
<CustomField>
    <fullName>Ratting__c</fullName>
    <formula>IF(
  ISPICKVAL(Check__c, &apos;Ok&apos;),
  Question__r.Actual_Ratting__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ratting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>