force-app/main/default/objects/SCP_Answers__c/fields/SCP__c.field-meta.xml
<CustomField>
    <fullName>SCP__c</fullName>
    <label>SCP</label>
    <referenceTo>Garage__c</referenceTo>
    <relationshipLabel>SCP Answers</relationshipLabel>
    <relationshipName>SCP_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>